Fix: Replaced CORS wildcard with explicit origin list for credential compliance